<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Budget Manager</string>

    <!-- Error messages -->
    <string name="txt_empty_field_error">This field can\'t be empty</string>
    <string name="txt_password_mismatch_error">Password mismatch</string>
    <string name="txt_invalid_email_error">Invalid email</string>
    <string name="txt_invalid_fields_error">Invalid Fields</string>
    <string name="txt_invalid_institution_name">Invalid Institution Name</string>
    <string name="msg_unable_login_error">Unable to Login. Please, check your credentials</string>
    <string name="msg_unable_process_information">Unable to process the information</string>
    <string name="msg_unable_register_error">Unable to register.</string>
    <string name="msg_unable_retrieve_institutions">Unable to retrieve institutions</string>

    <!-- Loading messages -->
    <string name="txt_login">Login…</string>
    <string name="txt_registering">Registering…</string>
    <string name="txt_searching">Searching…</string>

    <!-- Main/Navigation Screen -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_institution">Add Institution</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_settings">Settings</string>

    <!-- Login/Registration Screens -->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="txt_register_new_account">Register New Account</string>
    <string name="txt_already_has_account">Already has an account?</string>

    <!-- Add Institutions Screens -->
    <string name="hint_institution">Institution</string>
    <string name="btn_add_institution">Add Institution</string>
    <string name="txt_adding">Adding...</string>
    <string name="msg_unable_add">Unable to add</string>
    <string name="txt_loading_institution_information">Loading Institution Information</string>
    <string name="msg_unable_retrieve_institution_information">Unable to retrieve Institution information</string>
    <string name="msg_unable_retrieve_accounts">Unable to retrieve accounts</string>

</resources>
